[GTK] Toggle buttons are blurry with GTK+ 3.19 https://bugs.webkit.org/show_bug.cgi?id=154007

Reviewed by Michael Catanzaro.

Use min-width/min-height style properties when GTK+ >= 3.19.7 to
get the size of toggle buttons.

* rendering/RenderThemeGtk.cpp:
(WebCore::setToggleSize):
(WebCore::paintToggle):

Canonical link: https://commits.webkit.org/172171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196364 268f45cc-cd09-0410-ab3c-d52691b4dbfc